# diplodoc

./: README.md  diplodoc.code-workspace
diplodoc-client/: index.html  main.js  package-lock.json  package.json
diplodoc-client/public/: global.css  index.html
diplodoc-client/src/: App.svelte  Button.svelte  LButton.svelte  Logo.svelte  Paragraph.svelte  RButton.svelte  SmallText.svelte
diplodoc-client/src/Session/: Paragraph.svelte
diplodoc-client/src/lib/: messages.ts  types.ts
diplodoc-server/: README.md  pyproject.toml
diplodoc-server/diplodoc/: lock.py  message.py  server.py  session.py  state.py
diplodoc-server/diplodoc/lock/: __init__.py  lock.py  message.py
diplodoc-server/tests/: test_server.py  test_state.py
