[tool.poetry]
name = "diplodoc"
version = "0.1.0"
description = ""
authors = ["Marcin Tyszkiewicz <tyszkm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
pyserde = "^0.7.1"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
