[project]
name = "diplodoc"
version = "0.2.0"
description = ""
authors = [{ name = "Marcin Tyszkiewicz", email = "tyszkm@gmail.com" }]
requires-python = "~=3.9"
dependencies = [
    "aiohttp>=3.11.16",
    "pyserde>=0.23.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "rich>=14.0.0",
]

[project.scripts]
diplodoc-server = "diplodoc.server:main"

[dependency-groups]
dev = [
    "black>=22.3.0,<23",
    "isort>=5.10.1,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
